# pyscaffold

./: LICENSE  README.md  makefile  pyproject.toml
example_project_structures/: default.json
pyscaffold/: main.py  project_structure.py  scaffold.py
tests/: test_generate_folder_structure.py
